--- a/reserva-tu-turno.html
+++ b/reserva-tu-turno.html
@@ -92,7 +92,7 @@
                                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                 </div>
                                 <div class="modal-body">
-                                    <p class="parrafoModal"> Podés comunicarte a través de Whatsapp directamente. <br> Disculpas por las molestias causadas. <br> Gracias! </p> 
+                                    <p class="parrafoModal"> Pedí tu turno directamente a través de Whatsapp. <br> Disculpas por las molestias causadas. <br> Gracias! </p> 
                                 </div>
                                 <div class="modal-footer d-flex justify-content-center">
                                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
