Cambie el label de correo electronico en el footer por un placeholder

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0 maximum-scale=5.0">
-    <meta name="description" content="Pagina de la nutricionista Juliana Gimenez dedicada a mejorar la alimentación de las personas a través de el desarrollo de hábitos saludables sostenibles en el tiempo. Trabaja en formato online, presencial y a domicilio realizando planes alimentarios, antropometrias, talleres de educacion alimentaria y mas">
+    <meta name="description" content="Mejorá tu alimentación a través del desarrollo de hábitos saludables y sostenibles en el tiempo. Mi unico objetivo es ayudarte a lograr tus metas y acompañarte a lo largo de todo el proceso. Atiendo online, presencial y a domicilio realizando planes alimentarios, antropometrias, talleres de educacion alimentaria y más. Empezá hoy con el cambio que te mereces.">
     <meta name="keywords" content="Nutricion, nutricionista, alimentacion saludable, comida, calidad de vida, planes de alimentacion, personalizado, antropometria, talleres de alimentacion, consultorio, a domicilio, presencial, online, virtual, salud,alimentos">
     <title>NUTRICION JG: Mejorá tu alimentación</title>
     <link rel="shortcut icon" href="Imagenes/Logo JG Nutricion.jpeg" type="image/x-icon">
@@ -28,8 +28,7 @@
                 <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
                     <ul class="navbar-nav d-flex justify-content-evenly linksNavegacion">
                         <li class="nav-item">
-                            <a id="ancorNav" class="nav-link" href="sobre-mi.html">Sobre mi
-                            </a>
+                            <a id="ancorNav" class="nav-link" href="sobre-mi.html">Sobre mi</a>
                         </li>
                         <li class="nav-item">
                             <a id="ancorNav" class="nav-link" href="index.html#serviciosPaginaInicio">Servicios</a>
@@ -220,8 +219,7 @@
                         </div>
                         <div class="col-md-5 col-12">
                             <div class="form-outline form-white">
-                                <input type="email" id="form5Example21" class="form-control"/>
-                                <label class="form-label" for="form5Example21">Correo electronico</label>
+                                <input type="email" id="form5Example21" class="form-control" placeholder="Correo electronico"/>
                             </div>
                         </div>
                         <div class="col-auto">
