--- a/planes-de-alimentación.html
+++ b/planes-de-alimentación.html
@@ -216,8 +216,7 @@
                         </div>
                         <div class="col-md-5 col-12">
                             <div class="form-outline form-white">
-                                <input type="email" id="form5Example21" class="form-control"/>
-                                <label class="form-label" for="form5Example21">Correo electronico</label>
+                                <input type="email" id="form5Example21" class="form-control" placeholder="Correo electronico"/>
                             </div>
                         </div>
                         <div class="col-auto">
