--- a/talleres-de-alimentación.html
+++ b/talleres-de-alimentación.html
@@ -28,8 +28,7 @@
                 <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
                     <ul class="navbar-nav d-flex justify-content-evenly linksNavegacion">
                         <li class="nav-item">
-                            <a id="ancorNav" class="nav-link" href="sobre-mi.html">Sobre mi
-                            </a>
+                            <a id="ancorNav" class="nav-link" href="sobre-mi.html">Sobre mi</a>
                         </li>
                         <li class="nav-item">
                             <a id="ancorNav" class="nav-link" href="index.html#serviciosPaginaInicio">Servicios</a>
