--- a/index.html
+++ b/index.html
@@ -107,6 +107,11 @@
                 <div class="col-12 col-lg-6">
                     <p class="sobreMiTexto"> ¡Hola! Mi nombre es Juli y quiero darte la bienvenida a mi página web. Como Licenciada en Nutrición, creo que la base de una vida saludable comienza en torno a lo alimentario, es por esto que pongo siempre mi mayor esfuerzo en adaptar los planes de alimentación 100% a cada individuo considerando sus hábitos de vida y sus necesidades nutricionales. <br> <strong> Mi objetivo </strong> es que trabajemos juntos para mejorar tu relación con la comida y que, gracias a esto, puedas tener una alimentación saludable y una mejor calidad de vida. <br> Vamos a alcanzar nuestras metas paulatinamente, convirtiendo pequeños cambios en un habito diario.                         
                     </p>
+                    <div class="botonConoceMas">
+                        <a href="sobre-mi.html">
+                            <button class="botonFondo1">Conoce más</button>
+                        </a>
+                    </div>
                 </div>
             </div> 
         </section>
