responsive placeholder footer

--- a/index.html
+++ b/index.html
@@ -218,13 +218,13 @@
                 <form action="archivo.php" method="POST">
                     <div class="row d-flex justify-content-center">
                         <div class="col-auto">
-                            <p class="pt-2">
+                            <p class="pt-2 textoFooterDescuentos">
                                 Accedé a increibles descuentos y no te pierdas ninguna novedad:
                             </p>
                         </div>
                         <div class="col-md-5 col-12">
                             <div class="form-outline form-white">
-                                <input type="email" id="form5Example21" class="form-control" placeholder="Correo electronico"/>
+                                <input type="email" id="form5Example21" class="form-control placeholderFooter" placeholder="Correo electronico"/>
                             </div>
                         </div>
                         <div class="col-auto">
