--- a/talleres-de-alimentación.html
+++ b/talleres-de-alimentación.html
@@ -114,12 +114,12 @@
                                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                 </div>
                                 <div class="modal-body">
-                                    <p class="parrafoModal"> Pedí tu turno directamente a través de Whatsapp. <br> Disculpas por las molestias causadas. <br> Gracias! </p> 
+                                    <p class="parrafoModal"> Podés pedir tu turno directamente a través de Whatsapp. <br> Disculpas por las molestias causadas. <br> Gracias! </p> 
                                 </div>
                                 <div class="modal-footer d-flex justify-content-center">
                                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
                                     <button type="button" class="btn botonModalWhatsapp">
-                                        <a target="_blank" class="pieDePagina" href="https://wa.me/+5491124028206?text= Hola Juliana! Quería más información acerca de">
+                                        <a target="_blank" class="pieDePagina" href="https://wa.me/+5491124028206?text= Hola Juliana! Quería pedir un turno de ">
                                             <img src="Imagenes/Boton Whatsapp.png" loading="lazy" alt="Boton Whatsapp" class="botonModalWhatsapp">
                                         </a>
                                     </button>
@@ -133,7 +133,8 @@
                 <h3 class="titulos h3Consultorio">Consultorio:</h3>
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.9966672702735!2d-58.53884279797884!3d-34.57895088139242!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb776c10a751f%3A0xdb2ac8a876043fa1!2sBelgrano%203953%2C%20San%20Mart%C3%ADn%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1633394813154!5m2!1ses-419!2sar"style="border:0;" allowfullscreen="" loading="lazy" class="mapaConsultorio2">
                 </iframe>       
-                <p class="textoMapa"> Dirección: Belgrano 3953 (Localidad de San Martin)</p>
+                <p class="textoMapa"> <strong>Dirección: </strong>Belgrano 3953 (Localidad de San Martin) <br><br> <strong> Colectivos: </strong> 57, 78, 87, 161, 169, 176 <br><br> <strong>Trenes:</strong> A menos de 10 cuadras del Ferrocarril General Bartolomé Mitre (FCGBM) 
+                </p>
             </div>
         </section>
 
@@ -200,15 +201,14 @@
                         </div>
                         <div class="col-md-5 col-12">
                             <div class="form-outline form-white">
-                                <input type="email" id="form5Example21" class="form-control"/>
-                                <label class="form-label" for="form5Example21">Correo electronico</label>
+                                <input type="email" id="form5Example21" class="form-control" placeholder="Correo electronico"/>
                             </div>
                         </div>
                         <div class="col-auto">
-                            <button type="button" class="btn btn-outline-light mb-4" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                            <button type="button" class="btn btn-outline-light mb-4" data-bs-toggle="modal" data-bs-target="#ModalDelFooter">
                                 Suscribite!! 
                             </button>
-                            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                            <div class="modal fade" id="ModalDelFooter" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                                 <div class="modal-dialog">
                                     <div class="modal-content">
                                         <div class="modal-header">
@@ -216,12 +216,12 @@
                                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                         </div>
                                         <div class="modal-body">
-                                            <p class="parrafoModal"> Podés comunicarte a través de Whatsapp directamente. <br> Disculpas por las molestias causadas. <br> Gracias! </p> 
+                                            <p class="parrafoModal"> Podés comunicarte directamente a través de Whatsapp. <br> Disculpas por las molestias causadas. <br> Gracias! </p> 
                                         </div>
                                         <div class="modal-footer d-flex justify-content-center">
                                             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
                                             <button type="button" class="btn botonModalWhatsapp">
-                                                <a target="_blank" class="pieDePagina" href="https://wa.me/+5491124028206?text= Hola Juliana! Quería más información acerca de">
+                                                <a target="_blank" class="pieDePagina" href="https://wa.me/+5491124028206?text= Hola Juliana! Quería suscribirme a los mails de descuentos y beneficios. Mi mail es:">
                                                     <img src="Imagenes/Boton Whatsapp.png" loading="lazy" alt="Boton Whatsapp" class="botonModalWhatsapp">
                                                 </a>
                                             </button>
