cambie la pagina de recetas por beneficios...

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                             <a id="ancorNav" class="nav-link" href="reserva-tu-turno.html">Reserva tu turno</a>
                         </li>
                         <li class="nav-item">
-                            <a id="ancorNav" class="nav-link" href="recetas.html">Recetas</a>
+                            <a id="ancorNav" class="nav-link" href="beneficios.html">Beneficios</a>
                         </li>
                     </ul>
                 </div>
@@ -154,21 +154,34 @@
                         </a>
                     </div>
                 </div>
-                <div class="col-12 col-sm-6 col-md-6 col-lg-6 d-flex justify-content-center imagenesServicios">
+                <div class="col-12 col-sm-6 col-md-4 col-lg-4 d-flex justify-content-center imagenesServicios">
                     <div class="contenedorServicios">
+                        <a href="">
                         <img src="Imagenes/online index.JPG" loading="lazy" alt="Servicio de Consultas Online" class="imgServicios">
-                        <div class="capaIndex">
-                            <p class="textoDelServicio">Atención online</p>
-                            <p class="clicMasInfo">Hacé clic para más información</p>
-                        </div>
+                            <div class="capaIndex">
+                                <p class="textoDelServicio">Atención online</p>
+                                <p class="clicMasInfo">Hacé clic para más información</p>
+                            </div>
+                        </a>
                     </div>
                 </div>
-                <div class="col-12 col-sm-12 col-md-6 col-lg-6 d-flex justify-content-center imagenesServicios">
+                <div class="col-12 col-sm-6 col-md-4 col-lg-4 d-flex justify-content-center imagenesServicios">
                     <div class="contenedorServicios">
                         <a href="">
                         <img src="Imagenes/domicilio index.JPG" loading="lazy" alt="Servicio de atención a domicilio" class="imgServicios">
                             <div class="capaIndex">
                                 <p class="textoDelServicio">Atención a domicilio</p>
+                                <p class="clicMasInfo">Hacé clic para más información</p>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-6 col-md-4 col-lg-4 d-flex justify-content-center imagenesServicios">
+                    <div class="contenedorServicios">
+                        <a href="">
+                        <img src="Imagenes/foto compu mano.JPG" loading="lazy" alt="Servicio de atención a domicilio" class="imgServicios">
+                            <div class="capaIndex">
+                                <p class="textoDelServicio">Otros beneficios</p>
                                 <p class="clicMasInfo">Hacé clic para más información</p>
                             </div>
                         </a>
