--- a/sobre-mi.html
+++ b/sobre-mi.html
@@ -36,7 +36,7 @@
                             <a id="ancorNav" class="nav-link" href="reserva-tu-turno.html">Reserva tu turno</a>
                         </li>
                         <li class="nav-item">
-                            <a id="ancorNav" class="nav-link" href="recetas.html">Recetas</a>
+                            <a id="ancorNav" class="nav-link" href="beneficios.html">Beneficios</a>
                         </li>
                     </ul>
                 </div>
