Agregue un h5 de redes en el footer

--- a/beneficios.html
+++ b/beneficios.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0 maximum-scale=5.0">
-    
+    <meta name="viewport" content="width=device-width, initial-scale=1.0 maximum-scale=5.0">    
     <title>NUTRICION JG: Mejorá tu alimentación</title><meta name="description" content="Las recetas de esta pagina garantizan una alimentación adecuada, ayudan a las personas a lograr tener mayor variedad de su nutrición y poder tener diferentes opciones saludables para cocinar todos los días">
     <meta name="keywords" content="comidas saludables, alimentacion saludable, alimentos ricos, alimentacion balanceada, comidas ricas, menu saludable, nutricion, nutricionista, comida real">
     <link rel="shortcut icon" href="Imagenes/Logo JG Nutricion.jpeg" type="image/x-icon">
@@ -68,6 +67,7 @@
 
     <footer class="text-center text-white">
         <section class="container p-4">
+            <h5>Encontrame en mis redes sociales:</h5>
             <div>
                 <a target="_blank" class="btn btn-outline-light btn-floating m-3" href="https://wa.me/+5491124028206?text= Hola Juliana! Quería más información acerca de" role="button"> 
                     <i title="Icono de whatsapp" class="fab fa-whatsapp"></i>
