--- a/talleres-de-alimentación.html
+++ b/talleres-de-alimentación.html
@@ -174,6 +174,7 @@
 
     <footer class="text-center text-white">
         <section class="container p-4">
+            <h5>Encontrame en mis redes sociales:</h5>
             <div>
                 <a target="_blank" class="btn btn-outline-light btn-floating m-3" href="https://wa.me/+5491124028206?text= Hola Juliana! Quería más información acerca de" role="button"> 
                     <i title="Icono de whatsapp" class="fab fa-whatsapp"></i>
