--- a/como-trabajo.html
+++ b/como-trabajo.html
@@ -37,7 +37,7 @@
                             <a id="ancorNav" class="nav-link" href="reserva-tu-turno.html">Reserva tu turno</a>
                         </li>
                         <li class="nav-item">
-                            <a id="ancorNav" class="nav-link" href="recetas.html">Recetas</a>
+                            <a id="ancorNav" class="nav-link" href="como-trabajo.html">¿Cómo trabajo?</a>
                         </li>
                     </ul>
                 </div>
@@ -45,9 +45,9 @@
         </nav>
     </header>
     <main>
-        <h1 class="tituloRecetas">Recetas</h1>
+        <h1 class="tituloRecetas">¿Cómo trabajo?</h1>
         <section>
-            <h2 class="titulos">Pan integral con semillas</h2>
+            <h2 class="titulos">Atención online</h2>
             <div class="row d-flex justify-content-evenly recetasParteIzquierda">
                 <video class="col-12 col-lg-6 img-fluid videoPanIntegral" loading="lazy" src="Imagenes/Video Pan Integral.mp4" controls
                 alt="Video de la receta de pan integral con semillas"
