--- a/reserva-tu-turno.html
+++ b/reserva-tu-turno.html
@@ -38,7 +38,7 @@
                             <a id="ancorNav" class="nav-link" href="reserva-tu-turno.html">Reserva tu turno</a>
                         </li>
                         <li class="nav-item">
-                            <a id="ancorNav" class="nav-link" href="beneficios.html">Beneficios</a>
+                            <a id="ancorNav" class="nav-link" href="como-trabajo.html">¿Cómo trabajo?</a>
                         </li>
                     </ul>
                 </div>
