agregue foto y texto de atencion online y a domicilio en como trabajo

--- a/como-trabajo.html
+++ b/como-trabajo.html
@@ -49,16 +49,16 @@
         <section>
             <h2 class="titulos">Atención online</h2>
             <div class="row d-flex justify-content-evenly recetasParteIzquierda">
-                <video class="col-12 col-lg-6 img-fluid videoPanIntegral" loading="lazy" src="Imagenes/Video Pan Integral.mp4" controls
-                alt="Video de la receta de pan integral con semillas"
-                ></video>
-                <p class="col-12 col-lg-6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime tempore delectus voluptate nihil a ipsum magni labore mollitia placeat aperiam, consectetur, perspiciatis quisquam, perferendis doloremque assumenda. Nisi asperiores delectus doloribus, nostrum amet qui voluptate illum, accusantium quae nesciunt possimus aliquid sint repellendus fuga voluptates? Totam beatae eum ducimus? Totam, minus?
+                <img src="Imagenes/online index.JPG" loading="lazy" alt="Servicio de Consultas Online" class="videoPanIntegral">
+                <p class="col-12 col-lg-6">La tecnología nos permite mantenernos cerca a pesar de encontrarnos a miles de kilómetros de distancia. Si hacer coincidir tu rutina con el turno presencial se vuelve un caos, tenés que saber que la alternativa online siempre esta presente. De esta forma podrás conectarte desde tu casa, el trabajo, vacaciones, etc y poder seguir cuidando tu alimentación estes donde estes.
                 </p>
             </div>
+        </section>
+        <section>
+            <h2 class="titulos">Atención a domicilio</h2>
             <div class="row d-flex justify-content-evenly recetasParteDerecha">
-            <h2 class="titulos">Pizza con masa de zanahorias</h2>
-                <video class="col-12 col-lg-6 img-fluid videoPizzaZanahoria" loading="lazy" src="Imagenes/Pizza con masa de zanahoria.mp4" controls alt="Video de la receta de la pizza de zanahorias"></video>
-                <p class="col-12 col-lg-6"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto eos optio, quod architecto reprehenderit modi nobis vitae odit. Nam, et maxime, inventore adipisci reprehenderit eius eaque aut possimus illum doloremque in, dicta hic vero tempora praesentium harum sit quisquam. In quasi expedita pariatur ut libero cum. Saepe id sapiente impedit!</p>
+                <img src="Imagenes/domicilio index.JPG" loading="lazy" alt="Servicio de atención a domicilio" class="videoPizzaZanahoria">
+                <p class="col-12 col-lg-6"> La opción de atención a domicilio surge de la necesidad de poder ayudar a todos aquellos que no tienen la posibilidad de acudir al consultorio, presentándoles la alternativa de acercarme a sus hogares. <br> Estos encuentros nos permitirán conocernos, hacer una anamnesis completa y crear un plan de alimentación 100% adecuado a cada paciente. Quienes lo deseen, también podrán realizarse mediciones antropométricas.</p>
             </div>
         </section>
     </main>
