--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                 </div>
                 <div class="col-12 col-sm-6 col-md-4 col-lg-4 d-flex justify-content-center imagenesServicios">
                     <div class="contenedorServicios">
-                        <a href="como-trabajo.html">
+                        <a href="como-trabajo.html#atencionOnline">
                         <img src="Imagenes/online index.JPG" loading="lazy" alt="Servicio de Consultas Online" class="imgServicios">
                             <div class="capaIndex">
                                 <p class="textoDelServicio">Atención online</p>
@@ -167,7 +167,7 @@
                 </div>
                 <div class="col-12 col-sm-6 col-md-4 col-lg-4 d-flex justify-content-center imagenesServicios">
                     <div class="contenedorServicios">
-                        <a href="como-trabajo.html">
+                        <a href="como-trabajo.html#atencionDomicilio">
                         <img src="Imagenes/domicilio index.JPG" loading="lazy" alt="Servicio de atención a domicilio" class="imgServicios">
                             <div class="capaIndex">
                                 <p class="textoDelServicio">Atención a domicilio</p>
