Como trabajo ya se ve bien en desktop

--- a/como-trabajo.html
+++ b/como-trabajo.html
@@ -49,37 +49,37 @@
         <h1 class="tituloComoTrabajo">¿Cómo trabajo?</h1>
         <section>
             <h2 class="titulos">Atención online</h2>
-            <div class="row d-flex justify-content-evenly recetasParteIzquierda">
-                <img src="Imagenes/online index.JPG" loading="lazy" alt="Servicio de Consultas Online" class="videoPanIntegral">
-                <p class="col-12 col-lg-6">La tecnología nos permite mantenernos cerca a pesar de encontrarnos a miles de kilómetros de distancia. Si hacer coincidir tu rutina con el turno presencial se vuelve un caos, tenés que saber que la alternativa online siempre esta presente. De esta forma podrás conectarte desde tu casa, el trabajo, vacaciones, etc y poder seguir cuidando tu alimentación estes donde estes.</p>
+            <div class="row d-flex justify-content-evenly comoTrabajoParteIzquierda">
+                <img src="Imagenes/online index.JPG" loading="lazy" alt="Servicio de Consultas Online" class="fotoAtencionOnline">
+                <p class="col-12 col-lg-6 textosComoTrabajo">La tecnología nos permite mantenernos cerca a pesar de encontrarnos a miles de kilómetros de distancia. Si hacer coincidir tu rutina con el turno presencial se vuelve un caos, tenés que saber que la alternativa online siempre esta presente. De esta forma podrás conectarte desde tu casa, el trabajo, vacaciones, etc y poder seguir cuidando tu alimentación estes donde estes.</p>
             </div>
         </section>
         <section id="atencionDomicilio">
             <h2 class="titulos">Atención a domicilio</h2>
-            <div class="row d-flex justify-content-evenly recetasParteDerecha">
-                <img src="Imagenes/domicilio index.JPG" loading="lazy" alt="Servicio de atención a domicilio" class="videoPizzaZanahoria">
-                <p class="col-12 col-lg-6"> La opción de atención a domicilio surge de la necesidad de poder ayudar a todos aquellos que no tienen la posibilidad de acudir al consultorio, presentándoles la alternativa de acercarme a sus hogares. <br> Estos encuentros nos permitirán conocernos, hacer una anamnesis completa y crear un plan de alimentación 100% adecuado a cada paciente. Quienes lo deseen, también podrán realizarse mediciones antropométricas.</p>
+            <div class="row d-flex justify-content-evenly comoTrabajoParteDerecha">
+                <img src="Imagenes/domicilio index.JPG" loading="lazy" alt="Servicio de atención a domicilio" class="fotoAtencionDomicilio">
+                <p class="col-12 col-lg-6 textosComoTrabajo"> La opción de atención a domicilio surge de la necesidad de poder ayudar a todos aquellos que no tienen la posibilidad de acudir al consultorio, presentándoles la alternativa de acercarme a sus hogares. <br> Estos encuentros nos permitirán conocernos, hacer una anamnesis completa y crear un plan de alimentación 100% adecuado a cada paciente. Quienes lo deseen, también podrán realizarse mediciones antropométricas.</p>
             </div>
         </section>
         <section id="otrosBeneficios">
             <h2 class="titulos">Otros beneficios</h2>
             <div class="row d-flex justify-content-evenly contenedorBeneficios">
-                <img src="Imagenes/foto compu mano.JPG" loading="lazy" alt="Servicio de atención a domicilio" class="videoPanIntegral">
+                <img src="Imagenes/foto compu mano.JPG" loading="lazy" alt="Servicio de atención a domicilio" class="fotoOtrosBeneficios">
                 <div class="col-12 col-lg-6">
-                <p> Mi principal objetivo es que te decidas a mejorar tu alimentación y que de esta forma logres concretar tus metas. Para esto, trato de adaptarme 100% a tus necesidades y de brindarte la mejor atención y servicio posible. El mismo, consta de los siguientes beneficios: </p>
-                <ul class="listaBeneficios">
-                    <li> <strong>Diferentes modalidades de atención</strong> (Presencial, virtual, en consultorio y a domicilio).</li>
-                    <li><strong> Amplia disponibilidad horaria </strong> (De 9 a 20 horas).</li>
-                    <li>Atención y plan de alimentacion <strong> 100% personalizado</strong>, adaptado a tus objetivos, horarios, gustos y habitos.</li>
-                    <li><strong>Seguimiento permanente </strong>via Whatsapp para responder dudas al momento.</li>
-                    <li>2 Recetarios <strong>GRATIS </strong> incluidos con la reserva del turno (Más de 20 recetas saludables para todas tus comidas).</li>
+                    <p class="textosComoTrabajo"> Mi principal objetivo es que te decidas a mejorar tu alimentación y que de esta forma logres concretar tus metas. Para esto, trato de adaptarme 100% a tus necesidades y de brindarte la mejor atención y servicio posible. El mismo, consta de los siguientes beneficios: </p>
+                    <ul class="listaBeneficios">
+                        <li> <strong>Diferentes modalidades de atención</strong> (Presencial, virtual, en consultorio y a domicilio).</li>
+                        <li><strong> Amplia disponibilidad horaria </strong> (De 9 a 20 horas).</li>
+                        <li>Atención y plan de alimentacion <strong> 100% personalizado</strong>, adaptado a tus objetivos, horarios, gustos y habitos.</li>
+                        <li><strong>Seguimiento permanente </strong>via Whatsapp para responder dudas al momento.</li>
+                        <li>2 Recetarios <strong>GRATIS</strong> incluidos con la reserva del turno (Más de 20 recetas saludables para todas tus comidas).</li>
                 </ul>
                 </div>
             </div>
         </section>
         <!-- RESERVA TU TURNO -->
 
-        <h3 class="tituloReserva titulos"> Empezá hoy el cambio, reserva tu turno</h3>
+        <h3 class="titulos"> Empezá hoy el cambio, reserva tu turno</h3>
         <section class="row d-flex justify-content-evenly contenedorReservas">
             <div class="col-12 col-lg-6 cajaReservas">
                 <form action="archivo.php" method="POST" class="reservas">
