mq sass como trabajo y prueba de nesting index sass mq

--- a/como-trabajo.html
+++ b/como-trabajo.html
@@ -51,21 +51,21 @@
             <h2 class="titulos">Atención online</h2>
             <div class="row d-flex justify-content-evenly comoTrabajoParteIzquierda">
                 <img src="Imagenes/online index.JPG" loading="lazy" alt="Servicio de Consultas Online" class="fotoAtencionOnline">
-                <p class="col-12 col-lg-6 textosComoTrabajo">La tecnología nos permite mantenernos cerca a pesar de encontrarnos a miles de kilómetros de distancia. Si hacer coincidir tu rutina con el turno presencial se vuelve un caos, tenés que saber que la alternativa online siempre esta presente. De esta forma podrás conectarte desde tu casa, el trabajo, vacaciones, etc y poder seguir cuidando tu alimentación estes donde estes.</p>
+                <p class="col-12 col-xl-6 textosComoTrabajo">La tecnología nos permite mantenernos cerca a pesar de encontrarnos a miles de kilómetros de distancia. Si hacer coincidir tu rutina con el turno presencial se vuelve un caos, tenés que saber que la alternativa online siempre esta presente. De esta forma podrás conectarte desde tu casa, el trabajo, vacaciones, etc y poder seguir cuidando tu alimentación estes donde estes.</p>
             </div>
         </section>
         <section id="atencionDomicilio">
             <h2 class="titulos">Atención a domicilio</h2>
             <div class="row d-flex justify-content-evenly comoTrabajoParteDerecha">
                 <img src="Imagenes/domicilio index.JPG" loading="lazy" alt="Servicio de atención a domicilio" class="fotoAtencionDomicilio">
-                <p class="col-12 col-lg-6 textosComoTrabajo"> La opción de atención a domicilio surge de la necesidad de poder ayudar a todos aquellos que no tienen la posibilidad de acudir al consultorio, presentándoles la alternativa de acercarme a sus hogares. <br> Estos encuentros nos permitirán conocernos, hacer una anamnesis completa y crear un plan de alimentación 100% adecuado a cada paciente. Quienes lo deseen, también podrán realizarse mediciones antropométricas.</p>
+                <p class="col-12 col-xl-6 textosComoTrabajo"> La opción de atención a domicilio surge de la necesidad de poder ayudar a todos aquellos que no tienen la posibilidad de acudir al consultorio, presentándoles la alternativa de acercarme a sus hogares. <br> Estos encuentros nos permitirán conocernos, hacer una anamnesis completa y crear un plan de alimentación 100% adecuado a cada paciente. Quienes lo deseen, también podrán realizarse mediciones antropométricas.</p>
             </div>
         </section>
         <section id="otrosBeneficios">
             <h2 class="titulos">Otros beneficios</h2>
             <div class="row d-flex justify-content-evenly contenedorBeneficios">
                 <img src="Imagenes/foto compu mano.JPG" loading="lazy" alt="Servicio de atención a domicilio" class="fotoOtrosBeneficios">
-                <div class="col-12 col-lg-6">
+                <div class="col-12 col-xl-6">
                     <p class="textosComoTrabajo"> Mi principal objetivo es que te decidas a mejorar tu alimentación y que de esta forma logres concretar tus metas. Para esto, trato de adaptarme 100% a tus necesidades y de brindarte la mejor atención y servicio posible. El mismo, consta de los siguientes beneficios: </p>
                     <ul class="listaBeneficios">
                         <li> <strong>Diferentes modalidades de atención</strong> (Presencial, virtual, en consultorio y a domicilio).</li>
